tests/integration/error_handling/graph_consistency/02_requirement_exists_two_times_in_the_same_doc/test.itest
RUN: %expect_exit 1 %strictdoc export %S | filecheck %s --dump-input=fail
CHECK: error: DocumentIndex: two nodes with the same UID exist in the same document: REQ-001 in "Doc 1".
